ocaml/testsuite/tests/typing-layouts-err-msg/concrete_struct_item_expr.ml
(* TEST
   flags = "-extension layouts_alpha"
   * toplevel
*)

type t_any : any;;
(assert false : t_any);;
